Resized recipe cards with pixels at set breakpoints to ensure they dont look distorted when on an tablet

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -263,7 +263,7 @@ body {
 
     .card-img-top {
         width: 100%;
-        height: 35vw;
+        height: 30vw;
         object-fit: cover;
     }
 
@@ -272,16 +272,22 @@ body {
     }
 }
 
-@media only screen and (max-width: 767px) and (min-width: 501px) {
+@media only screen and (max-width: 1199px) and (min-width: 501px) {
 
     .card-img-top {
         width: 100%;
-        height: 30vw;
+        height: 200px;
         object-fit: cover;
     }
 
     .card-body {
-        height: 70vh;
+        height: 500px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .card-body {
+        height: 600px;
     }
 }
 
